<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:src="@drawable/i_quiz_logo"
            android:contentDescription="@string/mosque_logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/label"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--Start Bar Display-->
        <LinearLayout
            android:id="@+id/start_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/player_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_hint"
                android:imeOptions="actionDone|actionUnspecified"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:singleLine="true"
                 />

            <Button
                android:id="@+id/start_quiz_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:onClick="quizOne"
                android:text="@string/start_quiz_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/quiz_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_one"
            android:textSize="16sp"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/quiz_one_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/quiz_one_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizOne"
                android:text="@string/quiz_one_option_a" />

            <RadioButton
                android:id="@+id/quiz_one_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizOne"
                android:text="@string/quiz_one_option_b" />

            <RadioButton
                android:id="@+id/quiz_one_option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizOne"
                android:text="@string/quiz_one_option_c" />
        </RadioGroup>

        <Button
            android:id="@+id/go_to_quiz_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="quizTwo"
            android:text="@string/next_button"
            android:visibility="gone" />

        <!--Quiz two display-->
        <TextView
            android:id="@+id/quiz_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_two"
            android:textSize="16sp"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/quiz_two_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/quiz_two_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizTwo"
                android:text="@string/quiz_two_option_a" />

            <RadioButton
                android:id="@+id/quiz_two_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizTwo"
                android:text="@string/quiz_two_option_b" />

            <RadioButton
                android:id="@+id/quiz_two_option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizTwo"
                android:text="@string/quiz_two_option_c" />
        </RadioGroup>

        <Button
            android:id="@+id/go_to_quiz_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="quizThree"
            android:text="@string/next_button"
            android:visibility="gone" />

        <!--Quiz three display-->
        <TextView
            android:id="@+id/quiz_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_three"
            android:textSize="16sp"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/quiz_three_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/quiz_three_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizThree"
                android:text="@string/quiz_three_option_a" />

            <RadioButton
                android:id="@+id/quiz_three_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizThree"
                android:text="@string/quiz_three_option_b" />

            <RadioButton
                android:id="@+id/quiz_three_option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizThree"
                android:text="@string/quiz_three_option_c" />
        </RadioGroup>

        <Button
            android:id="@+id/go_to_quiz_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="quizFour"
            android:text="@string/next_button"
            android:visibility="gone" />

        <!--Quiz four display-->
        <TextView
            android:id="@+id/quiz_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_four"
            android:textSize="16sp"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/quiz_four_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/quiz_four_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizFour"
                android:text="@string/quiz_four_option_a" />

            <RadioButton
                android:id="@+id/quiz_four_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizFour"
                android:text="@string/quiz_four_option_b" />

            <RadioButton
                android:id="@+id/quiz_four_option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizFour"
                android:text="@string/quiz_four_option_c" />
        </RadioGroup>

        <Button
            android:id="@+id/go_to_quiz_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="quizFive"
            android:text="@string/next_button"
            android:visibility="gone" />

        <!--Quiz four display-->
        <TextView
            android:id="@+id/quiz_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_five"
            android:textSize="16sp"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/quiz_five_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/quiz_five_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizFive"
                android:text="@string/quiz_five_option_a" />

            <RadioButton
                android:id="@+id/quiz_five_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizFive"
                android:text="@string/quiz_five_option_b" />

            <RadioButton
                android:id="@+id/quiz_five_option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solveQuizFive"
                android:text="@string/quiz_five_option_c" />
        </RadioGroup>

        <Button
            android:id="@+id/report_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="reportCard"
            android:text="@string/report_card_button"
            android:visibility="gone" />
        <!--Summary Report Display-->
        <TextView
            android:id="@+id/summary_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reset"
            android:text="@string/reset_button"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>